fitur update profil

--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -25,6 +25,12 @@
         android:text="TextView" />
 
     <Button
+        android:id="@+id/btnupdateprofil"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update Profil" />
+
+    <Button
         android:id="@+id/btnlogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
