--- a/app/src/main/res/layout/fragment_update_profil.xml
+++ b/app/src/main/res/layout/fragment_update_profil.xml
@@ -31,7 +31,7 @@
                 android:layout_marginBottom="5dp"/>
 
             <Button
-                android:id="@+id/updatefoto"
+                android:id="@+id/btnpilihfoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="foto"
