--- a/app/src/main/res/layout/fragment_update_profil.xml
+++ b/app/src/main/res/layout/fragment_update_profil.xml
@@ -22,12 +22,12 @@
             android:padding="10dp"
             android:paddingTop="10dp">
 
-            <ImageView
+            <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/updateprevimage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/defaultprofile"
                 android:layout_gravity="center"
+                android:layout_marginStart="1dp"
                 android:layout_marginBottom="5dp"/>
 
             <Button
@@ -83,8 +83,6 @@
                 android:layout_height="wrap_content"
                 android:text="PERBAHARUI"
                 style="@style/Widget.AppCompat.Button.Colored"/>
-
-
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
