--- a/app/src/main/res/layout/listdataperolehanpelanggan.xml
+++ b/app/src/main/res/layout/listdataperolehanpelanggan.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_above="@+id/listidhadiah"
             android:layout_alignParentStart="true"
             android:padding="10dp"
-            android:layout_marginTop="3dp">
+            android:layout_marginBottom="1dp"
+
+            >
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
