--- a/app/src/main/res/layout/fragment_utama.xml
+++ b/app/src/main/res/layout/fragment_utama.xml
@@ -6,20 +6,23 @@
     android:orientation="vertical"
     tools:context="id.sch.smkn13bdg.adhi.brilinkarkanfoto.UtamaFragment">
 
-    <com.synnapps.carouselview.CarouselView
-        android:id="@+id/carouselView"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        app:fillColor="#FFFFFFFF"
-        app:pageColor="#00000000"
-        app:radius="6dp"
-        app:slideInterval="3000"
-        app:strokeColor="#FF777777"
-        app:strokeWidth="1dp"/>
+        android:layout_height="180dp"
+        android:layout_marginBottom="8dp"/>
+
+    <LinearLayout
+        android:id="@+id/SliderDots"
+        android:layout_below="@+id/viewPager"
+        android:orientation="horizontal"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="85dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
