--- a/app/src/main/res/layout/fragment_pointku.xml
+++ b/app/src/main/res/layout/fragment_pointku.xml
@@ -5,7 +5,6 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context="id.sch.smkn13bdg.adhi.brilinkarkanfoto.PointKuFragment">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,13 +12,14 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="176dp"
             android:layout_margin="2dp">
 
             <com.github.lzyzsd.circleprogress.ArcProgress
                 android:id="@+id/arc_progress"
+                android:layout_marginTop="17dp"
                 android:background="#FFFFFF"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_width="125dp"
                 android:layout_height="125dp"
                 custom:arc_progress="0"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="sisa transaksi"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="165dp"
+                android:layout_marginTop="145dp"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold"/>
 
@@ -56,20 +56,20 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="77dp"
-                    android:text="POINT KU"
-                    android:textSize="24sp"
-                    android:textColor="@color/colorPrimary"/>
+                    android:text="POINT"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/textpointku"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/texttanggalpasif"
-                    android:layout_marginStart="35dp"
-                    android:layout_toEndOf="@+id/textView3"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="37dp"
+                    android:layout_toEndOf="@+id/texttanggalpasif"
                     android:text="000"
                     android:textColor="@color/colorAccent"
-                    android:textSize="40dp"
+                    android:textSize="35dp"
                     android:textStyle="bold" />
 
                 <TextView
