--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -5,35 +5,94 @@
     android:orientation="vertical"
     tools:context="id.sch.smkn13bdg.adhi.brilinkarkanfoto.ProfilFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/txtprofilid"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:padding="40dp">
 
-    <TextView
-        android:id="@+id/txtprofilnama"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:paddingTop="10dp">
 
-    <TextView
-        android:id="@+id/txtprofilnokartu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/profilprevimage"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="28dp"/>
 
-    <Button
-        android:id="@+id/btnupdateprofil"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Update Profil" />
+            <!-- TODO: Update blank fragment layout -->
+            <TextView
+                android:id="@+id/txtprofilnokartu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Id Anggota"
+                android:textColor="@color/colorAccent"
+                android:textSize="22dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="15dp"/>
 
-    <Button
-        android:id="@+id/btnlogout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="LOGOUT" />
+            <TextView
+                android:id="@+id/txtprofilnama"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Nama :"
+                android:textColor="@color/colorAccent"
+                android:textSize="17dp"
+                android:layout_marginLeft="15dp"/>
+
+            <TextView
+                android:id="@+id/txtprofilemail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Email :"
+                android:textColor="@color/colorAccent"
+                android:textSize="17dp"
+                android:layout_marginLeft="15dp"/>
+
+            <TextView
+                android:id="@+id/txtprofilkontak"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Kontak :"
+                android:textColor="@color/colorAccent"
+                android:textSize="17dp"
+                android:layout_marginLeft="15dp"/>
+
+            <TextView
+                android:id="@+id/txtprofilalamat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
+                android:text="Alamat :"
+                android:textColor="@color/colorAccent"
+                android:textSize="17dp"
+                android:layout_marginLeft="15dp"/>
+
+            <Button
+                android:id="@+id/btnupdateprofil"
+                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Update Profil" />
+
+            <Button
+                android:id="@+id/btnlogout"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="LOGOUT" />
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
