--- a/app/src/main/res/layout/fragment_utama.xml
+++ b/app/src/main/res/layout/fragment_utama.xml
@@ -6,78 +6,79 @@
     android:orientation="vertical"
     tools:context="id.sch.smkn13bdg.adhi.brilinkarkanfoto.UtamaFragment">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginBottom="8dp"/>
-
-    <LinearLayout
-        android:id="@+id/SliderDots"
-        android:layout_below="@+id/viewPager"
-        android:orientation="horizontal"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="85dp">
-
-        <RelativeLayout
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="180dp"
+            android:layout_marginBottom="8dp"/>
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="41dp"
-                android:layout_marginTop="15dp"
-                android:text="Point Ku"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15dp"/>
+        <LinearLayout
+            android:id="@+id/SliderDots"
+            android:layout_below="@+id/viewPager"
+            android:orientation="horizontal"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"/>
 
-            <TextView
-                android:id="@+id/txtpoint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView4"
-                android:layout_below="@+id/textView4"
-                android:layout_marginTop="10dp"
-                android:text="000"
-                android:textColor="@color/colorAccent"
-                android:textSize="22dp"
-                android:textStyle="bold"/>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="80dp">
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignTop="@+id/textView4"
-                android:layout_marginEnd="58dp"
-                android:text="Aktif Sampai"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15dp"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/texttglpasif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/textView7"
-                android:layout_alignTop="@+id/txtpoint"
-                android:text="000"
-                android:textColor="@color/colorAccent"
-                android:textSize="22dp"
-                android:textStyle="bold"/>
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="41dp"
+                        android:layout_marginTop="10dp"
+                        android:text="POINT"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="15dp" />
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listview02"/>
+                    <TextView
+                        android:id="@+id/txtpoint"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/textView4"
+                        android:layout_below="@+id/textView4"
+                        android:layout_marginTop="10dp"
+                        android:text="- - -"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="22dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignTop="@+id/textView4"
+                        android:layout_marginEnd="58dp"
+                        android:text="AKTIF SAMPAI"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="15dp" />
+
+                    <TextView
+                        android:id="@+id/texttglpasif"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/textView7"
+                        android:layout_alignTop="@+id/txtpoint"
+                        android:text="- - -"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="22dp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/listview02"/>
 </LinearLayout>
