--- a/app/src/main/res/layout/fragment_qr_card.xml
+++ b/app/src/main/res/layout/fragment_qr_card.xml
@@ -3,14 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_google_signin_btn_text_light_disabled"
     android:orientation="vertical"
+    android:paddingLeft="40dp"
+    android:paddingRight="40dp"
     tools:context="id.sch.smkn13bdg.adhi.brilinkarkanfoto.ProfilFragment">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:padding="1dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,26 +23,24 @@
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
-                android:layout_height="205dp"
-                android:src="@drawable/kopkartu"
+                android:layout_height="210dp"
                 android:scaleType="fitXY"
-                />
+                android:src="@drawable/kopkartu" />
 
             <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/profilprevimage"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:id="@+id/kartuqrcode"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="10dp" />
+                android:layout_marginTop="1dp" />
 
             <!-- TODO: Update blank fragment layout -->
             <TextView
-                android:id="@+id/txtnokartu"
+                android:id="@+id/kartunokartu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="1dp"
                 android:text="ID KARTU"
                 android:textAlignment="center"
                 android:textColor="@color/place_autocomplete_prediction_primary_text_highlight"
@@ -48,7 +49,7 @@
 
 
             <TextView
-                android:id="@+id/txtnamakartu"
+                android:id="@+id/kartunama"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -63,8 +64,10 @@
                 android:id="@+id/imageView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/footerkartu"
-                android:scaleType="fitXY"/>
+                android:layout_marginBottom="0dp"
+                android:layout_marginEnd="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/footerkartu" />
 
 
         </LinearLayout>
