--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_pointku"
             android:icon="@drawable/ic_cake_black_24dp"
             android:title="Point Rewards" />
+        <item
+            android:id="@+id/nav_kartuku"
+            android:icon="@drawable/ic_payment_black_24dp"
+            android:title="Kartu Point" />
 
     </group>
 
