--- a/app/src/main/res/layout/fragment_qr_card.xml
+++ b/app/src/main/res/layout/fragment_qr_card.xml
@@ -27,38 +27,13 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/kopkartu" />
 
-            <com.android.volley.toolbox.NetworkImageView
+            <ImageView
                 android:id="@+id/kartuqrcode"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="1dp" />
 
-            <!-- TODO: Update blank fragment layout -->
-            <TextView
-                android:id="@+id/kartunokartu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="1dp"
-                android:text="ID KARTU"
-                android:textAlignment="center"
-                android:textColor="@color/place_autocomplete_prediction_primary_text_highlight"
-                android:textSize="12dp"
-                android:textStyle="bold" />
-
-
-            <TextView
-                android:id="@+id/kartunama"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
-                android:text="NAMA"
-                android:textAlignment="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="12dp"
-                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/imageView3"
