--- a/app/src/main/res/layout/fragment_qrcode.xml
+++ b/app/src/main/res/layout/fragment_qrcode.xml
@@ -9,45 +9,30 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:text="SCAN KUNCI"/>
+        <TextView
+            android:layout_marginTop="55dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="UNTUK MENDAPATKAN HADIAH"/>
 
-            <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/kartuqrcode"
-                android:layout_marginTop="2dp"
-                android:layout_width="350dp"
-                android:layout_height="350dp"
-                android:layout_gravity="center_horizontal"/>
-
-            <!-- TODO: Update blank fragment layout -->
-            <TextView
-                android:id="@+id/kartunokartu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="1dp"
-                android:text="ID KARTU"
-                android:textAlignment="center"
-                android:textColor="@color/place_autocomplete_prediction_primary_text_highlight"
-                android:textSize="22dp"
-                android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/qrcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
 
 
-            <TextView
-                android:id="@+id/kartunama"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
-                android:text="NAMA"
-                android:textAlignment="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="15dp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
